# poetry_tool_versions

./: .whitesource  pyproject.toml
