[tool.poetry]
name = "poetry-tool-versions-critical"
version = "0.1.0"
description = "Critical test: .tool-versions overrides pyproject.toml - Dependencies require Python 3.11+"
authors = ["Test <test@example.com>"]

[tool.poetry.dependencies]
# CRITICAL: These package versions require Python >=3.11
pillow = "12.1.0" 
networkx = "3.6.1" 
numpy = "2.4.2" 
 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
